@@ -127,6 +127,7 @@ Wolfpack 12.9.14 Beta (SVN)
   - Implemented stonemining (50:50 chance for ore:gem if activated through the contextmenu of tool).
   - Implemented some new npcs (thx to idget).
   - Implemented ballot box.
+  - Added a gobaseid command.
  * Misc. Changes:
  * Known Issues, Bugs, and Missing Features:
   - Some skills are still incomplete.
